--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npx webpack serve --devtool source-map --env useTs=true --open",
+    "start-js": "npx webpack serve --devtool source-map --open",
     "dev": "npx webpack serve --devtool source-map --env useTs=true",
     "build": "npx webpack --mode=production --env useTs=true",
     "build-js": "npx webpack --mode=production",
