--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "npx webpack serve --devtool source-map --env useTs=true --open",
-    "start-js": "npx webpack serve --devtool source-map --open",
-    "dev": "npx webpack serve --devtool source-map --env useTs=true",
-    "build": "npx webpack --mode=production --env useTs=true",
-    "build-js": "npx webpack --mode=production",
+    "start": "npx webpack serve --devtool source-map --open",
+    "start-ts": "npx webpack serve --devtool source-map --env useTs=true --open",
+    "build": "npx webpack --mode=production",
+    "build-ts": "npx webpack --mode=production --env useTs=true",
     "eslint": "npx eslint src/ --ext js"
   },
-  "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.16.7",
     "ts-loader": "^9.2.8",
